headscale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: headscale
  namespace: headscale
  labels:
    app.kubernetes.io/name: headscale
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: grpc
      port: 50443
      targetPort: 50443
      protocol: TCP
  selector:
    app.kubernetes.io/name: headscale
